--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "deploy": "strapi deploy",
     "develop": "strapi develop",
     "seed:example": "node ./scripts/seed.js",
-    "start": "strapi start",
+    "start": "node server.js",
     "strapi": "strapi"
   },
   "dependencies": {
@@ -21,6 +21,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
+    "sqlite3": "^5.1.7",
     "styled-components": "^6.0.0"
   },
   "devDependencies": {
