feat: Setting production config

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 HOST=0.0.0.0
 PORT=1337
+ADMIN_PATH=/admin
+STRAPI_ADMIN_BACKEND_URL=http://localhost:1337
+STRAPI_TELEMETRY_DISABLED=true
 APP_KEYS="toBeModified1,toBeModified2"
 API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
