--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@strapi/plugin-cloud": "5.9.0",
     "@strapi/plugin-users-permissions": "5.9.0",
     "@strapi/strapi": "5.9.0",
+    "@vercel/node": "^5.1.0",
     "better-sqlite3": "11.3.0",
+    "dotenv": "^16.4.7",
     "fs-extra": "^10.0.0",
     "mime-types": "^2.1.27",
     "react": "^18.0.0",
