--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "deploy": "strapi deploy",
     "develop": "strapi develop",
     "seed:example": "node ./scripts/seed.js",
-    "start": "node server.js",
+    "start": "strapi start",
     "strapi": "strapi"
   },
   "dependencies": {
