--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,7 @@ $RECYCLE.BIN/
 ############################
 
 .tmp
+tmp
 *.log
 *.sql
 *.sqlite
@@ -129,3 +130,4 @@ dist
 build
 .strapi-updater.json
 .strapi-cloud.json
+
