--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,25 @@
+ 
+# Server
 HOST=0.0.0.0
 PORT=1337
-ADMIN_PATH=/admin
-STRAPI_ADMIN_BACKEND_URL=http://localhost:1337
-STRAPI_TELEMETRY_DISABLED=true
-APP_KEYS="toBeModified1,toBeModified2"
-API_TOKEN_SALT=tobemodified
-ADMIN_JWT_SECRET=tobemodified
-TRANSFER_TOKEN_SALT=tobemodified
-JWT_SECRET=tobemodified
+ 
+# Secrets
+APP_KEYS=t1Xx/JWeCjnqQNhVg+fedg==,bGHDIYahlS9412U/aavzxQ==,l+NZcMAoKYol5BZlIEB6mg==,ktr+ahgChaHCO9Fwv07JJw==
+API_TOKEN_SALT=I8OBddfo1gltgFP5C7mJ7A==
+ADMIN_JWT_SECRET=4fLRO4YoHugTHt4O+URsKA==
+TRANSFER_TOKEN_SALT=R1fsPLl7KYcKY6zj+ZtL7Q==
+ 
+DATABASE_CLIENT=postgres
+DATABASE_HOST=ep-broad-thunder-a4amrhfu-pooler.us-east-1.aws.neon.tech
+DATABASE_PORT=5432
+DATABASE_NAME=neondb
+DATABASE_USERNAME=neondb_owner
+DATABASE_PASSWORD=npg_5RPtMDawV2mp
+DATABASE_SSL=true
+DATABASE_FILENAME=
+JWT_SECRET=2+E/Tes0IqffILJLR9W3KA==
+
+AZURE_STORAGE_ACCOUNT_KEY=86caad5a-4983-4fa6-b2f1-21332003ab1b
+AZURE_STORAGE_ACCOUNT_NAME=storagestrapihispasat
+AZURE_STORAGE_CONTAINER_NAME=strapi-upload
+ 
