--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,11 +23,13 @@
     // Include all js files
     "./**/*.js",
     // Force the JSON files in the src folder to be included
-    "src/**/*.json"
+    "src/**/*.json",
+    "src/**/*.ts"
   ],
 
   "exclude": [
     "node_modules/",
+    "node_modules", "dist",
     "build/",
     "dist/",
     ".cache/",
